# audit-inspector

./: .README.md.swp  .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: eventlog.rs  install.rs  logging.rs  main.rs  policies.rs  registries.rs  sysmon.rs  windows_errors.rs
