[package]
name = "audit-inspector"
version = "0.1.9"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
lazy_static = "1.4.0"
regex = "1.10.4"
serde_json = "1.0.117"
sha2 = "0.10.8"

[dependencies.windows-registry]
version = "0.1"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_Rpc",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_EventLog",
    "Win32_System_Threading",
    "Win32_System_TaskScheduler",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Variant",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
]
